--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,23 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Montserrat:wght@400;600;700&family=Raleway:wght@400;600;700&family=Lato:wght@400;600;700&family=Open+Sans:wght@400;600;700&display=swap');
+
+
+/*
+* Poppins: For headers or areas needing modern and clean typography.
+* Montserrat: Great for sleek and bold headings.
+* Raleway: Use for elegant and professional headings or subheadings.
+* Lato: A friendly and approachable font, good for body text.
+* Open Sans: Neutral and highly readable, excellent for general content.
+*/
+
+
+:root{
+  --black: #000;
+  --yellow: #FFD700;
+  --white: #FFF;
+  --blue: #1E90FF;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+body {
+  font-family: 'Open Sans', sans-serif;
+  background-color: var(--black);
 }
